Update 1.0 -> alterando um pouquinho os estilos

--- a/index.html
+++ b/index.html
@@ -18,6 +18,11 @@
         <div class="botaoClick">
             <button id="botao" onclick="handleSpeak()">Repetir em Voz Alta</button>
         </div>
+        <div class="inicio">
+            <p>A ideia inicial era apenas poder xingar alguém de forma divertida.</p>
+            <p>Mas parece que a pessoa não gostou muito...</p>
+            <p>Foda-se! Vou criar mesmo assim! Alguém deve gostar.</p>
+        </div>
     </main>
 </body>
 </html>
